# wp-tt-dashboard

./: .env.example  .gitignore  Cargo.toml  README.md  live-map-dev-guide.md
crates/api/: Cargo.toml
crates/api/src/: agg.rs  cycles.rs  db.rs  learn.rs  live.rs  livemap.rs  main.rs  models.rs  periods.rs  routes.rs  workpool.rs
crates/core/: Cargo.toml
crates/extractor/: Cargo.toml
crates/extractor/sql/: assigned_tt.sql  c06_k_mph_voyage.sql  c07_k_mph_realtime.sql  c08_k_crane_q.sql  c10_k_tt_cycle.sql  e1c_k_util_crane_merged_intervals.sql  e3a_k_util_tt_merged.sql  e3b_k_cycle_refined_v2.sql  e4_k_empty_decomposition.sql  e5_k_crane_q_by_hour.sql  f2_k_qc_q.sql  voyage_plan.sql  workpool.sql  workqueue.sql
crates/extractor/src/: baseline.rs  db.rs  handover.rs  lib.rs  main.rs  params.rs  runner.rs  shift.rs  transform.rs  vessel.rs  workpool.rs
crates/extractor/src/kpis/: common.rs  k_crane_q_daily.rs  k_crane_q_hour.rs  k_cycle.rs  k_empty.rs  k_mph_realtime.rs  k_mph_voyage.rs  k_qc_q.rs  k_tt_cycle.rs  k_util_crane.rs  k_util_tt.rs  mod.rs
crates/extractor/tests/: rollup_pg.rs  transform_pg.rs  upsert_pg.rs
crates/extractor/tests/fixtures/: k_util_tt.stdout.json
db/: apply.sh  grants.sql
db/migrations/: 0001_run_log.sql  0002_raw_tables.sql  0003_staging.sql  0004_l1_rollups.sql  0005_l2_stats.sql  0006_qc_wait.sql  0007_kpi_shift.sql  0008_vessel_shift.sql  0009_kpi_shift_weight.sql  0010_vessel_qc_shift.sql  0011_util_tt_shift.sql  0012_workpool.sql  0013_candidate.sql  0014_raw_k_tt_cycle.sql  0015_util_tt_sample.sql  0016_live_assigned_tt.sql  0017_tt_cycle_by_jobtype.sql  0018_assigned_tt_status.sql  (+13 more)
deploy/: dev-db.sh
docs/: 2026-06-08-tt-assignment-customer-session-ko.html  cycle-detection-v2-design.md  mock-dashboard.html  snapshot-2026-06-04.html
docs-site/: astro.config.mjs  package-lock.json
kc/: capacity-planning-ko.html  cycle-detection-ko.html  cycle-v2-design-ko.html  dispatch-pools-ko.html  glossary.html  index.html  kc-shell.css  kc-shell.js  kpi-computation-ko.html  news.html  ops-runbook-ko.html  research-log.html  summary.html  tos-db-reference-ko.html  tt-assignment-session-ko.html  tt-prediction-research-ko.html  websocket-data-ko.html  websocket-fields-ko.html  websocket-kpi-accuracy-ko.html  work-pool-ko.html
scripts/: dev.sh  snapshot-report.sh  snapshot-template.html  snapshot.sql
web/: index.html  kc-render-check.mjs  package-lock.json  package.json  vite.config.ts
web/src/: api.ts  (+13 more)
(+71 files in other folders)
