[workspace]
resolver = "2"
members = ["crates/core", "crates/extractor", "crates/api"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "proprietary"

[workspace.dependencies]
# shared
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# async / runtime
tokio = { version = "1", features = ["full"] }
# db
sqlx = { version = "0.8", default-features = false, features = [
  "runtime-tokio", "tls-rustls", "postgres", "chrono", "bigdecimal", "macros", "migrate",
] }
bigdecimal = "0.4"
# cli
clap = { version = "4", features = ["derive", "env"] }
# api
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs", "set-header"] }
utoipa = { version = "5", features = ["axum_extras", "chrono"] }
# stats
statrs = "0.18"
# internal
wp-core = { path = "crates/core" }
