[package]
name = "wp-api"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[dependencies]
wp-core = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
# live-map GPS ingest: plain ws:// over the local SSH tunnel (no TLS)
tokio-tungstenite = { version = "0.24", default-features = false, features = ["connect", "handshake"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
