[package]
name = "wp-extractor"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "extractor"
path = "src/main.rs"

[dependencies]
wp-core = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
sqlx = { workspace = true }
bigdecimal = { workspace = true }
